--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cousine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
     <title>Notebook</title>
 </head>
 <body>
@@ -14,18 +14,22 @@
         <h1 class="site_title"><?xml version="1.0" ?><svg height="42px" class="notebook_icon" version="1.1" viewBox="0 0 32 32" width="42px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill="none" fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1"><g fill="#157EFB" id="icon-50-notebook"><path d="M22,4 L24.0000398,4 C24.5452911,4 25,4.44568129 25,4.99545703 L25,28.004543 C25,28.5447371 24.5523026,29 24.0000398,29 L8.9999602,29 C8.45470893,29 8,28.5543187 8,28.004543 L8,27 L9,27 L9,26 L8,26 L8,23 L9,23 L9,22 L8,22 L8,19 L9,19 L9,18 L8,18 L8,15 L8,15 L9,15 L9,14 L8,14 L8,11 L9,11 L9,10 L8,10 L8,7 L9,7 L9,6 L8,6 L8,4.99545703 C8,4.45526288 8.44769743,4 8.9999602,4 L16,4 L16,16 L19,13 L22,16 L22,4 L22,4 L22,4 Z M7,19 L7,22 L6,22 L6,23 L7,23 L7,23 L7,26 L6,26 L6,27 L7,27 L7,27.9926701 C7,29.1012878 7.89092539,30 8.99742191,30 L24.0025781,30 C25.1057238,30 26,29.1016617 26,27.9926701 L26,5.00732994 C26,3.89871223 25.1090746,3 24.0025781,3 L8.99742191,3 C7.89427625,3 7,3.89833832 7,5.00732994 L7,6 L6,6 L6,7 L7,7 L7,10 L6,10 L6,11 L7,11 L7,14 L6,14 L6,15 L7,15 L7,18 L6,18 L6,19 L7,19 L7,19 Z M17,4 L17,13.5999756 L19,11.5999756 L21,13.5999756 L21,4 L17,4 L17,4 Z" id="notebook"/></g></g></svg>Notebook</h1>
     </header>
     <main>
-        <section class="text-editor">
-            <input type="text" class="note_title" placeholder="Enter title of note:">
-            <textarea name="write-note" id="note" placeholder="Enter text/note" class="textarea"></textarea>
-            <button class="save_btn" type="submit">Save</button>
-        </section>
-        <section class="saved-notes">
-            <div class="sidebar">
-                <h2 class="sidebar_title">Notes</h2>
-            </div>
-        </section>
+        <div class="container">
+            <section class="text-editor">
+                <input type="text" class="note_title" placeholder="Enter title of note:">
+                <textarea name="write-note" id="note" placeholder="Enter text/note" class="textarea"></textarea>
+                <button class="save_btn" type="submit">Save</button>
+            </section>
+            <section class="saved-notes">
+                <div class="sidebar">
+                    <h2 class="sidebar_title">Notes</h2>
+                    <input type="text" class="search" placeholder="Search notes...">
+                </div>
+                <button class="delete_all_button">Delete all notes</button>
+            </section>
+        </div>    
     </main>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script1.js"></script>
 </body>
 </html>
