--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </div>    
     </main>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="js/script1.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
